...
                              style: TextStyle(fontSize: 13)),
                          Expanded(
                            child: ListView(
                              children: [
                                const SizedBox(height: 30),
                                TextFormField(
                                  key: Key('titleNewLessonForm'),
                                  controller: titleController,
                                  validator: (value) {
                                    if (value == null || value.isEmpty) {
                                      return AppLocalizations.of(context)!
                                          .pleaseEnterText;
                                    }
...
                                DropdownCategory(
                                    callback: callbackCategory,
                                    categories: categories,
                                    initCategory: ""),
                                const SizedBox(height: 10),
                                TextFormField(
                                  key: Key('descriptionNewLessonForm'),
                                  validator: (value) {
                                    if (value == null || value.isEmpty) {
                                      return AppLocalizations.of(context)!
                                          .pleaseEnterText;
                                    }
                                    return null;
...
                                ),
                                const SizedBox(height: 10),
                                Row(
                                  children: [
                                    Expanded(
                                      child: ElevatedButton(
                                        key: Key('submitNewLessonForm'),
                                        style: ElevatedButton.styleFrom(
                                          backgroundColor: const Color.fromARGB(
                                              255, 233, 64, 87),
                                        ),
                                        onPressed: () {
                                          if (isBusy) {
...
