...
    "@searchLessonHint":{
        "description": "Search a lesson"
    },



    "lessonAdded":"Lesson added!",
    "@lessonAdded":{
        "description": "Lesson added!"
    },
    "createLessonTitle":"Create a lesson",
    "@createLessonTitle":{
        "description": "Create a lesson title page"
    },
    "createLessonSubtitle":"Here you can create your lesson. Give lessons to other people in the community to receive points that you can spend on other community lessons.",
    "@createLessonSubtitle":{
        "description": "Create a lesson subtitle page"
    },
    "pleaseEnterText":"Please enter some text",
    "@pleaseEnterText":{
        "description": "Hint message textfiled"
    },
    "title":"Title",
    "@title":{
        "description": "Title"
...
        "description": "hint textfield description"
    },
    "category":"Category",
    "@category":{
        "description": "Category"
    },
    "pleaseCategoryText":"Please select a category",
    "@categoryFieldHint":{
        "description": "Select one category message error"
    },
    "categoryFieldHint":"Select the category of your lesson",
    "@categoryFieldHint":{
        "description": "hint textfield category"
...
