...
            children: [
              _currentPage + 1 == content.length
                  ? Padding(
                      padding: EdgeInsets.only(
                          top: 0.1 * height, bottom: 0.1 * height),
                      child: ElevatedButton(
                        key: const Key('startOnBoardingHor'),
                        onPressed: () {
                          _storeOnboardInfo();
                          Navigator.pushReplacement(context,
                              MaterialPageRoute(builder: (context) => Login()));
                        },
                        style: ElevatedButton.styleFrom(
...
                  : Padding(
                      padding: EdgeInsets.all(0.06 * width),
                      child: Row(
                        //mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        children: [
                          TextButton(
                            key: const Key('skipButtonHor'),
                            onPressed: () {
                              _pageController.jumpToPage(2);
                            },
                            style: TextButton.styleFrom(
                              elevation: 0,
                              textStyle: TextStyle(
...
